[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Fonts/labelfont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/Fonts/scorefont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scripts/hits.gd" type="Script" id=5]
[ext_resource path="res://scenes/powerup.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/buttonshader.tres" type="Shader" id=7]
[ext_resource path="res://assets/Images/controls/joystick.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shader = ExtResource( 7 )
shader/shading_mode = 0
shader_param/x = false

[node name="player" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ship" parent="." instance=ExtResource( 2 )]

[node name="layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="attack" type="Label" parent="layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 70.0
margin/right = 155.0
margin/bottom = 114.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.996094, 0.515496, 0.00389099, 1 )
text = "DAMAGE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="energy" type="Label" parent="layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 26.0
margin/right = 159.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.496817, 0.239624, 0.589844, 1 )
text = "ENERGY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="hits" type="Label" parent="layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 479.0
margin/top = 16.0
margin/right = 868.0
margin/bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976562, 0.976562, 0.94223, 1 )
custom_colors/font_color_shadow = Color( 0.0114136, 0.0433106, 0.132812, 1 )
text = "HITS 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="powerup" parent="layer" instance=ExtResource( 6 )]

transform/pos = Vector2( 3.19681, -2.9459 )
transform/scale = Vector2( 0.626603, 0.626603 )

[node name="polarity_button" type="TouchScreenButton" parent="layer"]

material/material = SubResource( 1 )
transform/pos = Vector2( 1064.89, 501.217 )
transform/scale = Vector2( 0.757914, 0.757914 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1

[connection signal="pressed" from="layer/polarity_button" to="." method="_on_polarity_button_pressed"]

[connection signal="released" from="layer/polarity_button" to="." method="_on_polarity_button_released"]


